--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -3,7 +3,7 @@ server:
 
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/dev_users_db
+    url: jdbc:postgresql://localhost:5432/userdb
     username: postgres
     password: 12937234
   jpa:
